bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:2: error: type mismatch;
 found   : Int(21)
 required: Boolean
  return (talking && !(7<hour<21))
                              ^